@@ -1,0 +1,9 @@
+package Lto13_Pkg is
+
+  procedure Proc;
+
+private
+
+  type T;
+
+end Lto13_Pkg;
