@@ -1,3 +1,8 @@
+2012-05-20  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/utils.c (gnat_write_global_declarations): Put a name
+	on the dummy global variable.
+
 2012-05-19  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/decl.c (Has_Thiscall_Convention): New macro.
